[project]
name = "researchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-api>=0.6.14",
    "langgraph-cli>=0.4.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]
